[package]
name = "rust-android-example"
version = "0.1.0"
authors = ["Philipp Kaiser"]
edition = "2018"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
game-gl = { path = "../game-gl"} #{ git = "https://github.com/Kaiser1989/game-gl" }

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = { git = "https://github.com/Kaiser1989/android-ndk-rs" }

[package.metadata.android]
build_targets = [ "armv7-linux-androideabi", "aarch64-linux-android", "i686-linux-android", "x86_64-linux-android" ]