[package]
name = "rust-android-example"
version = "0.1.0"
authors = ["Philipp Kaiser"]
edition = "2018"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
game-gl = { git = "https://github.com/Kaiser1989/game-gl" }
log = "0.4.11"
simple_logger = "1.11.0"

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = "0.5.0"

[package.metadata.android]
build_targets = [ "armv7-linux-androideabi", "aarch64-linux-android", "i686-linux-android", "x86_64-linux-android" ]
opengles_version_major = 3
opengles_version_minor = 0
assets = "assets"